--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>Kanban App</title>
   </head>
-  <body style="background-color: #191E2B;">
+  <body style="background-color: #191E2B; overflow-x: hidden;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
